spectec/test/elab/neg/parse-stray-rbrace.spectec
;; Stray closing brace — generic menhir fallback "unexpected token".

}
